--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,14 @@ clap = { version = "4.5", features = ["cargo", "derive"]}
 indicatif = "0.17" # progress bar
 time = { version = "0.3", features = ["formatting"] }
 tempfile = "3.16"
-umya-spreadsheet = "2.2.2"
+umya-spreadsheet = "2.2"
 infer = "0.19" # check file type
 thiserror = "2.0" 
+regex = "1.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 #atty = "0.2"          # detect if a cli tool is running in a terminal or in a script or redirected.
-regex = "1.11"
 #ndarray = "0.16"
 #polars = "0.46.0"
 #sevenz-rust = "0.4"   # 7z compression/decompression
@@ -31,3 +33,6 @@ regex = "1.11"
 [[bin]]
 name = "lvgl"
 path = "src/bin/lvgl.rs"
+
+[dev-dependencies]
+cargo-tarpaulin = "0.32"
