--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ clap = { version = "4.5", features = ["cargo", "derive"]}
 indicatif = "0.17" # progress bar
 time = { version = "0.3", features = ["formatting"] }
 tempfile = "3.16"
-umya-spreadsheet = "2.2"
+umya-spreadsheet = "2.2.3"
 infer = "0.19" # check file type
 thiserror = "2.0" 
 regex = "1.11"
@@ -22,7 +22,8 @@ serde_json = "1.0"
 
 #atty = "0.2"          # detect if a cli tool is running in a terminal or in a script or redirected.
 #ndarray = "0.16"
-#polars = "0.46.0"
+polars = { version = "0.46.0", features = ["parquet"] }
+polars_excel_writer = "0.12"
 #sevenz-rust = "0.4"   # 7z compression/decompression
 #zstd = "0.9"          # zstd compression/decompression
 #lz4 = "1.0"           # lz4 compression/decompression
@@ -33,6 +34,10 @@ serde_json = "1.0"
 [[bin]]
 name = "lvgl"
 path = "src/bin/lvgl.rs"
+
+[[bin]]
+name = "xlsx_playground"
+path = "src/bin/xlsx_playground.rs"
 
 [dev-dependencies]
 cargo-tarpaulin = "0.32"
